--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    
 </head>
 <body>
     <header>
-        <h1>landing</h1>
+
+    <nav>
+        <a href="link1">Home</a>
+        <a href="link2">Product</a>
+        <a href="link3">Pricing</a>
+        <a href="link4">About</a>
+        <a href="link5">Contacts</a>
+
+    </nav>
+
     </header>
     <main>
-<img src="img/cat.jpeg" alt="cat">
+
     </main>
     <footer>
 
