--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <a href="link3">Pricing</a>
         <a href="link4">About</a>
         <a href="link5">Contacts</a>
-
+<div>
+    <img src="nav/logo.png" alt="logo">
+</div>
     </nav>
 
     </header>
