--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
 
     <nav>
-        <a href="link1">Home</a>
-        <a href="link2">Product</a>
-        <a href="link3">Pricing</a>
-        <a href="link4">About</a>
-        <a href="link5">Contacts</a>
+        <a href="#">Home</a>
+        <a href="#">Product</a>
+        <a href="#">Pricing</a>
+        <a href="#">About</a>
+        <a href="#">Contacts</a>
 <div>
     <img src="nav/logo.png" alt="logo">
 </div>
