add block testimonials and partners

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="organizer__text">
                                 <p>Most calendars are designed for teams.
                                     Slate is designed for freelancers</p>
-                                <a href="#" class="caption-main__button main-button">Try for free</a>
+                                <a href="#" class="organizer__button main-button">Try for free</a>
                             </div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <section class="letters">
-                <div class="letters__body">
+                <div class="letters__container">
                     <div class="pictureforletter">
                         <img src="img/pictureforletters.png" alt="picture for letters">
                     </div>
@@ -177,7 +177,7 @@
                         <div class="subscribe-letters__newsletters">
                             <h3>Subscribe to our Newsletter</h3>
                             <p class="subscribe-letters__avaliable">Available exclusivery on Figmaland</p>
-                    
+
                             <form class="subscribe-letters__form">
                                 <label class="subscribe-letters__form-label" for="email"></label>
                                 <input class="subscripe-letters__form-input" type="email" id="email" name="email"
@@ -190,8 +190,8 @@
                 </div>
             </section>
 
-            <div class="partners">
-                <div class="partners_body">
+            <section class="partners">
+                <div class="partners-container">
                     <div class="partners__title title">
                         <h4>Partners</h4>
                     </div>
@@ -199,8 +199,84 @@
                         <p>Most calendars are designed for teams.
                             Slate is designed for freelancers</p>
                     </div>
+                    <div class="partners__item-container">
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/logos_google.png" alt="logoname">
+                        </div>
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/amazon.png" alt="logoname">
+                        </div>
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/microsoft.png" alt="logoname">
+                        </div>
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/uber.png" alt="logoname">
+                        </div>
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/dropbox.png" alt="logoname">
+                        </div>
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/logos_google.png" alt="logoname">
+                        </div>
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/uber.png" alt="logoname">
+                        </div>
+                        <div class="partners__item">
+                            <div class="partners__clientname">
+                                <p>Client name</p>
+                            </div>
+                            <img class="partners__clientlogo" src="img/amazon.png" alt="logoname">
+                        </div>
+                    </div>
+
                 </div>
+                <a href="#" class="partners__button main-button">Try for free</a>
+        </div>
+        </section>
+        <section class="testimonials">
+            <div class="testimonials-container">
+                <div class="testimonials__title title">
+                    <h2>Testimonials</h2>
+                </div>
+                <img class="testimonials__logo" src="img/ibmlogo.png" alt="ibmlogo">
+                <div class="testimonials__text">
+                    <p>Most calendars are designed for teams. Slate is designed for freelancers
+                        who want a simple way to plan their schedule.</p>
+                </div>
+                <div class="testimonials__ui-designer">
+                    <img class="testimonials__ui-photo" src="img/ui-designer.png" alt="ui-photo">
+                    <h5 class="testimonials__ui-title">Organize across</h5>
+                    <p class="testimonials__ui-text">UI designer</p>
+                </div>
+                <a href="#" class="testimonials__button main-button">More Testimonials</a>
+
             </div>
+
+        </section>
+
+
+        </div>
     </main>
     <footer>
     </footer>
