add block tariffs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css/styles.css">
     <title>landing</title>
 
 </head>
@@ -270,15 +271,88 @@
                     <p class="testimonials__ui-text">UI designer</p>
                 </div>
                 <a href="#" class="testimonials__button main-button">More Testimonials</a>
-
             </div>
-
         </section>
 
-
-        </div>
+        <section class="pricing">
+            <div class="pricing-container">
+                <div class="pricing__title title">
+                    <h2>Pricing</h2>
+                    <h4 class="pricing__text">Most calendars are designed for teams.
+                        Slate is designed for freelancers</h4>
+                </div>
+                <div class="pricing__tariffs tariffs">
+                    <div class="tariffs__free-item">
+                        <h3 class="tariffs__free-title">FREE</h3>
+                        <h6 class="tariffs__free-text">Organize across all
+                            apps by hand</h6>
+                    </div>
+                    <div class="tariffs__price price">
+                        <h1 class="price__quantity">0</h1>
+                        <div class="price__info">
+                            <h3 class="price__currency">$</h3>
+                            <h5 class="price__duration">Per Month</h5>
+                        </div>
+                    </div>
+                    <div class="tariffs__features">
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                    </div>
+                    <a href="#" class="tariffs__button main-button">Order Now</a>
+                </div>
+                <div class="pricing__tariffs tariffs">
+                    <div class="tariffs__free-item">
+                        <h3 class="tariffs__free-title">STANDART</h3>
+                        <h6 class="tariffs__free-text">Organize across all
+                            apps by hand</h6>
+                    </div>
+                    <div class="tariffs__price price">
+                        <h1 class="price__quantity">10</h1>
+                        <div class="price__info">
+                            <h3 class="price__currency">$</h3>
+                            <h5 class="price__duration">Per Month</h5>
+                        </div>
+                    </div>
+                    <div class="tariffs__features">
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                    </div>
+                    <a href="#" class="tariffs__button main-button">Order Now</a>
+                </div>
+                <div class="pricing__tariffs tariffs">
+                    <div class="tariffs__free-item">
+                        <h3 class="tariffs__free-title">BUSINESS</h3>
+                        <h6 class="tariffs__free-text">Organize across all
+                            apps by hand</h6>
+                    </div>
+                    <div class="tariffs__price price">
+                        <h1 class="price__quantity">99</h1>
+                        <div class="price__info">
+                            <h3 class="price__currency">$</h3>
+                            <h5 class="price__duration">Per Month</h5>
+                        </div>
+                    </div>
+                    <div class="tariffs__features">
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                        <p class="tariffs__features__item">Pricing Feature</p>
+                    </div>
+                    <a href="#" class="tariffs__button main-button">Order Now</a>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
     <footer>
+        
     </footer>
 </body>
 
