--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css/styles.css">
     <title>landing</title>
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
@@ -14,15 +15,13 @@
     <header class="header">
         <nav class="header__nav">
             <div class="header__logo-container logo-container">
-                <img src="nav/logo.png" class="header__logo-container logo-container" alt="logo">
             </div>
             <div class="header__menu">
-                <a href="#home" class="header__menu-home">Home</a>
-                <a href="#product" class="header__menu-product">Product</a>
-                <a href="#pricing" class="header__menu-pricing">Pricing</a>
-                <a href="#about" class="header__menu-about">About</a>
-                <a href="#contacts" class="header__menu-contacts">Contacts</a>
-
+                <a href="#home" class="header__menu-item">Home</a>
+                <a href="#product" class="header__menu-item">Product</a>
+                <a href="#pricing" class="header__menu-item">Pricing</a>
+                <a href="#about" class="header__menu-item">About</a>
+                <a href="#contacts" class="header__menu-item">Contacts</a>
             </div>
         </nav>
         <div class="socialmedia">
@@ -50,19 +49,19 @@
                         <path
                             d="M30.7517 0.989624H1.29255C0.58409 0.989624 0.0117188 1.562 0.0117188 2.27046V31.7296C0.0117188 32.438 0.58409 33.0104 1.29255 33.0104H30.7517C31.4601 33.0104 32.0325 32.438 32.0325 31.7296V2.27046C32.0325 1.562 31.4601 0.989624 30.7517 0.989624ZM27.0533 10.3357H24.4956C22.4903 10.3357 22.1021 11.2883 22.1021 12.6892V15.7752H26.8892L26.2648 20.6064H22.1021V33.0104H17.1108V20.6104H12.9361V15.7752H17.1108V12.2129C17.1108 8.07822 19.6365 5.82476 23.3268 5.82476C25.096 5.82476 26.613 5.95685 27.0573 6.01689V10.3357H27.0533Z"
                             fill="white" />
-                    </svg>
-                </a>
+                    </svg> </a>
+                <div class="caption-main">
+                    <h1 class="caption-main__title title">The best products start with Figma </h1>
+                    <p class="caption-main__text">Most calensars are designed for teams. State is designed for
+                        freelancers</p>
+                        
+                    <a href="#" class="caption-main__button main-button">Try for free</a>
+                </div>
             </div>
         </div>
-
-
     </header>
     <main>
-        <div class="caption-main">
-            <h1 class="caption-main__title title">The best products start Figma </h1>
-            <h4 class="caption-main__text">Most calensars are designed for teams. State is designed for freelancers</h4>
-            <a href="#" class="caption-main__button main-button">Try for free</a>
-        </div>
+
         <div class="future">
             <div class="future__body">
                 <div class="about__header">
@@ -352,7 +351,7 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 
